--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "🍔 Qamarero KDS Helper",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Visual category indicators for Qamarero KDS",
   "icons": {
     "16": "./icons/icon16.png",
@@ -12,7 +12,7 @@
     {
       "matches": ["https://kds.qamarero.com/*"],
       "css": ["content.css"],
-      "js": ["content.js"],
+      "js": ["categories.js", "content.js"],
       "run_at": "document_end"
     }
   ]
