feat: improve extension popup

--- a/pos-offers-toggle-extension/manifest.json
+++ b/pos-offers-toggle-extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "🎯 Qamarero POS Offers Toggle",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Guía paso a paso para activar/desactivar ofertas en Qamarero POS",
   "permissions": ["storage", "tabs"],
   "action": {
@@ -10,9 +10,21 @@
   "content_scripts": [
     {
       "matches": ["https://pos.qamarero.com/*"],
+      "js": ["injector.js"],
+      "run_at": "document_start",
+      "world": "ISOLATED"
+    },
+    {
+      "matches": ["https://pos.qamarero.com/*"],
+      "js": ["intercept.js"],
+      "run_at": "document_start",
+      "world": "MAIN"
+    },
+    {
+      "matches": ["https://pos.qamarero.com/*"],
       "js": ["content.js"],
       "css": ["content.css"],
-      "run_at": "document_end"
+      "run_at": "document_idle"
     }
   ]
 }
