--- a/pos-offers-toggle-extension/manifest.json
+++ b/pos-offers-toggle-extension/manifest.json
@@ -1,9 +1,16 @@
 {
   "manifest_version": 3,
   "name": "🎯 Qamarero POS Offers Toggle",
-  "version": "1.1.0",
-  "description": "Guía paso a paso para activar/desactivar ofertas en Qamarero POS",
-  "permissions": ["storage", "tabs"],
+  "version": "2.0.0",
+  "description": "Activar/desactivar ofertas en Qamarero POS via API directa",
+  "permissions": ["storage", "cookies", "tabs"],
+  "host_permissions": [
+    "https://qamarero.stellate.sh/*",
+    "https://pos.qamarero.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "popup.html"
   },
@@ -19,12 +26,6 @@
       "js": ["intercept.js"],
       "run_at": "document_start",
       "world": "MAIN"
-    },
-    {
-      "matches": ["https://pos.qamarero.com/*"],
-      "js": ["content.js"],
-      "css": ["content.css"],
-      "run_at": "document_idle"
     }
   ]
 }
